--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -2,7 +2,7 @@
   --bg-color: #130D14;
   --lighter-bg-color: #2C1F30;
   --accent: #E8A4FF;
-  --text-color: #E9D3F0;
+  --text-color: #DCC8E3;
 }
 
 * {
@@ -14,6 +14,8 @@ body {
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   line-height: 1.5;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 h1,
@@ -23,6 +25,7 @@ h4,
 h5,
 h6 {
   margin: 0;
+  color: var(--accent);
 }
 
 p {
