--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -31,3 +31,14 @@ h6 {
 p {
   margin: 0;
 }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav ul {
+  display: flex;
+  text-decoration: none;
+}
