--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1.7;
   background-color: var(--bg-color);
   color: var(--text-color);
 }
@@ -30,6 +30,10 @@ h6 {
 
 p {
   margin: 0;
+}
+
+img {
+  max-width: 100%;
 }
 
 .navbar {
@@ -49,4 +53,44 @@ p {
   color: var(--text-color);
   text-transform: capitalize;
   border-bottom: solid 2px transparent;
+}
+
+.hero {
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+  height: 70vh;
+}
+
+.heroHeader {
+  margin-bottom: 1.5em;
+}
+
+.heroTitle {
+  font-size: 2.5em;
+  font-weight: 900;
+}
+
+.heroParagraph {
+  width: 100%;
+  max-width: 400px;
+  margin-bottom: 1.5em;
+}
+
+.heroImg {
+  width: 29.375em;
+  height: 29.375em;
+  border-radius: 50%;
+  padding: .5em;
+  border: solid 3px var(--text-color);
+}
+
+button {
+  background-color: var(--accent);
+  padding: .8em 2em;
+  border-radius: 1em;
+  font-size: inherit;
+  text-transform: capitalize;
 }
