--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -28,12 +28,39 @@ h6 {
   color: var(--accent);
 }
 
+h2 {
+  margin-bottom: 1em;
+}
+
 p {
   margin: 0;
 }
 
 img {
   max-width: 100%;
+}
+
+.container-lg {
+  width: 100%;
+  max-width: 1900px;
+  margin: 0 auto;
+}
+
+.container {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+.container-sml {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.brand {
+  font-size: 1.3em;
+  color: var(--accent);
 }
 
 .navbar {
@@ -56,12 +83,12 @@ img {
 }
 
 .hero {
-  padding: 1em;
+  padding: 4em 1em;
   display: flex;
+  flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
   gap: 2em;
-  height: 70vh;
 }
 
 .heroHeader {
@@ -75,13 +102,11 @@ img {
 
 .heroParagraph {
   width: 100%;
-  max-width: 400px;
+  max-width: 600px;
   margin-bottom: 1.5em;
 }
 
 .heroImg {
-  width: 29.375em;
-  height: 29.375em;
   border-radius: 50%;
   padding: .5em;
   border: solid 3px var(--text-color);
