made navbar sticky

--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -83,6 +83,9 @@ button {
 }
 
 .navbar {
+  position: sticky;
+  top: 0;
+  z-index: 99;
   display: flex;
   justify-content: space-between;
   align-items: center;
