--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -112,8 +112,10 @@ button {
   align-items: center;
   gap: 2em;
   background: linear-gradient(to right, rgba(0,0,0, .3), rgba(0,0,0, .6)),
-  url(/starter/images/hero-bg.jpg) no-repeat center;
+  url(/starter/images/hero-bg.jpg) no-repeat center fixed;
   background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 
 .heroHeader {
@@ -132,7 +134,7 @@ button {
 }
 
 .heroImg {
-  border-radius: 15em 15em 0 0;
+  border-radius: 50%;
   padding: .5em;
   border: solid 3px var(--text-color);
 }
