--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Source+Serif+Pro:wght@600&display=swap');
+
 :root {
   --bg-color: #130D14;
   --lighter-bg-color: #2C1F30;
@@ -12,7 +14,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.7;
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -26,6 +28,7 @@ h5,
 h6 {
   margin: 0;
   color: var(--accent);
+  font-family: 'Source Serif Pro', serif;
 }
 
 h2 {
