--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&family=Source+Serif+Pro:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Source+Code+Pro:wght@700&display=swap');
 
 :root {
   --bg-color: #130D14;
@@ -14,7 +14,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Inter', sans-serif;
   line-height: 1.7;
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -28,7 +28,7 @@ h5,
 h6 {
   margin: 0;
   color: var(--accent);
-  font-family: 'Source Serif Pro', serif;
+  font-family: 'Source Code Pro', monospace;
 }
 
 h2 {
@@ -122,6 +122,7 @@ header {
   text-transform: capitalize;
   border-bottom: solid 2px transparent;
   padding: 1em;
+  font-size: 16px;
 }
 
 .link:hover {
@@ -289,7 +290,7 @@ header {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
   .hero {
     padding: 2em 1em;
   }
